04 Jun 2003 Device number specification extension. Device numbers are now
            CUU or CUU-CUU or CUU.count or CUU,CUU or a combination
            of the above - Ivan Warren
01 Jun 2003 Updated hercconf.html page to include ECPS:VM,
            2703, 3410, 3490, 9347 D/T and explanation for
            2703 parameters - Ivan Warren
29 May 2003 Correction to diagnose 0 to use real address - Jan Jaeger
28 May 2003 Use unix sockets for localhost shared devices - Greg Smith
26 May 2003 Yet another round for channel.c locking - Greg Smith
26 May 2003 Fixes and performance enhancements for shared devices - Greg Smith
23 May 2003 Locate Block logic fix - Ivan Warren, Suggested by *Anonymous*
23 May 2003 Provide command response in DIAG 8 resp buffer - Ivan Warren
22 May 2003 Add CPUVERID config statement to set version code - Jan Jaeger
22 May 2003 Add DIAG8CMD config statement to enable diag 8 commands - Jan Jaeger
21 May 2003 Fix spec exception in LPSW on incorrect amode settings - Jan Jaeger
19 May 2003 Close all FDs before forking hercifc - Ivan Warren
18 May 2003 Fix incorrect amask in LPSW in 64 bit mode - Jan Jaeger
15 May 2003 Fixed cygwin regparm bug check bug in configure.ac:
            __attribute__ ((regparm(3))) in wrong place - Fish
15 May 2003 Created "destroy_lock" and "destroy_condition" macros;
            added support destroying locks/conds to fthreads - Fish
15 May 2003 Fixed impl.c so FishHang doesn't crash - Fish
14 May 2003 Update in cmpsc.c store_ch - Scott Blackledge/Bernard van der Helm
09 May 2003 Update dasdtab.c 3380 entries - Jesper by Greg Smith
05 May 2003 Write zeroes at end of file to increase its size if ftruncate
            doesn't work - Greg Smith, suggested by Andy Kane
05 May 2003 Meaningful error messages for invalid or unsupported parms
            to dasdinit - Greg Smith, suggested by John Summerfield
05 May 2003 Meaningful error messages for unconfigured compression - Greg Smith,